// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueScreenHeader should match the altered style by the prop headerStyles 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#052962",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "paddingVertical": 10,
      },
      Object {
        "backgroundColor": "#7D0068",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "flex-end",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "width": "100%",
        },
        Array [
          Object {
            "marginTop": 20,
          },
          Object {
            "height": 49,
          },
        ],
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <View
        style={
          Object {
            "paddingLeft": 14,
          }
        }
      >
        <View
          accessibilityLabel="Regions and specials editions menu"
          accessibilityRole="button"
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderRadius": 24,
              "height": 42,
              "justifyContent": "center",
              "opacity": 1,
              "width": 42,
            }
          }
        >
          <RNSVGSvgView
            bbHeight={42}
            bbWidth={42}
            fill="none"
            focusable={false}
            height={42}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                undefined,
                Object {
                  "opacity": 1,
                },
                Object {
                  "flex": 0,
                  "height": 42,
                  "width": 42,
                },
              ]
            }
            width={42}
          >
            <RNSVGGroup
              fill={null}
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            >
              <RNSVGRect
                fill={
                  Array [
                    0,
                    4278190080,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                height="41"
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "stroke",
                  ]
                }
                rotation={0}
                rx="20.5"
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={
                  Array [
                    0,
                    4294967295,
                  ]
                }
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                width="41"
                x="0.5"
                y="0.5"
              />
              <RNSVGCircle
                cx="29"
                cy="14"
                fill={
                  Array [
                    0,
                    4294949576,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                r="7"
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                x={0}
                y={0}
              />
              <RNSVGCircle
                cx="14"
                cy="14"
                fill={
                  Array [
                    0,
                    4294967295,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                r="7"
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                x={0}
                y={0}
              />
              <RNSVGCircle
                cx="29"
                cy="29"
                fill={
                  Array [
                    0,
                    4287683839,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                r="7"
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                x={0}
                y={0}
              />
              <RNSVGCircle
                cx="14"
                cy="29"
                fill={
                  Array [
                    0,
                    4294934287,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                r="7"
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 0,
            "flexDirection": "row",
          },
          Object {
            "width": 0,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexGrow": 1,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "flexGrow": 1,
              "flexShrink": 0,
              "paddingHorizontal": 14,
            }
          }
        >
          <RNGestureHandlerButton
            collapsable={false}
            onGestureEvent={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            onHandlerStateChange={[Function]}
            rippleColor={0}
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                undefined,
              ]
            }
          >
            <View
              accessible={true}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View>
                <Text
                  style={
                    Array [
                      Object {
                        "flexShrink": 0,
                        "fontFamily": "GTGuardianTitlepiece-Bold",
                        "fontSize": 24,
                        "lineHeight": 26,
                      },
                      Array [
                        Object {
                          "color": "#ffffff",
                          "marginTop": -2,
                        },
                        undefined,
                        Object {
                          "color": "#007ABC",
                        },
                      ],
                    ]
                  }
                >
                  Thursday
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "flexShrink": 0,
                        "fontFamily": "GTGuardianTitlepiece-Bold",
                        "fontSize": 24,
                        "lineHeight": 26,
                      },
                      Array [
                        Object {
                          "color": "#ffffff",
                          "marginTop": -2,
                        },
                        Object {
                          "color": "#ffe500",
                        },
                        Object {
                          "color": "#F3C100",
                        },
                      ],
                    ]
                  }
                >
                  25 June
                </Text>
              </View>
            </View>
          </RNGestureHandlerButton>
        </View>
        <View
          style={
            Object {
              "paddingRight": 14,
            }
          }
        >
          <View
            accessibilityHint="More issues"
            accessibilityRole="button"
            accessible={true}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderRadius": 999,
                    "height": 42,
                    "justifyContent": "center",
                    "paddingHorizontal": 21,
                  },
                  Object {
                    "backgroundColor": "#ffe500",
                  },
                  Object {
                    "alignItems": "center",
                    "aspectRatio": 1,
                    "justifyContent": "center",
                    "paddingHorizontal": 0,
                    "width": 42,
                  },
                  undefined,
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "fontFamily": "GuardianIcons-Regular",
                      "fontSize": 20,
                      "lineHeight": 20,
                    },
                    Array [
                      Object {
                        "color": "#121212",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`IssueScreenHeader should match the default style 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#052962",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "paddingVertical": 10,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "flex-end",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "width": "100%",
        },
        Array [
          Object {
            "marginTop": 20,
          },
          Object {
            "height": 49,
          },
        ],
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <View
        style={
          Object {
            "paddingLeft": 14,
          }
        }
      >
        <View
          accessibilityLabel="Regions and specials editions menu"
          accessibilityRole="button"
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderRadius": 24,
              "height": 42,
              "justifyContent": "center",
              "opacity": 1,
              "width": 42,
            }
          }
        >
          <RNSVGSvgView
            bbHeight={42}
            bbWidth={42}
            fill="none"
            focusable={false}
            height={42}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                undefined,
                Object {
                  "opacity": 1,
                },
                Object {
                  "flex": 0,
                  "height": 42,
                  "width": 42,
                },
              ]
            }
            width={42}
          >
            <RNSVGGroup
              fill={null}
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            >
              <RNSVGRect
                fill={
                  Array [
                    0,
                    4278190080,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                height="41"
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "stroke",
                  ]
                }
                rotation={0}
                rx="20.5"
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={
                  Array [
                    0,
                    4294967295,
                  ]
                }
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                width="41"
                x="0.5"
                y="0.5"
              />
              <RNSVGCircle
                cx="29"
                cy="14"
                fill={
                  Array [
                    0,
                    4294949576,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                r="7"
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                x={0}
                y={0}
              />
              <RNSVGCircle
                cx="14"
                cy="14"
                fill={
                  Array [
                    0,
                    4294967295,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                r="7"
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                x={0}
                y={0}
              />
              <RNSVGCircle
                cx="29"
                cy="29"
                fill={
                  Array [
                    0,
                    4287683839,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                r="7"
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                x={0}
                y={0}
              />
              <RNSVGCircle
                cx="14"
                cy="29"
                fill={
                  Array [
                    0,
                    4294934287,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                r="7"
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 0,
            "flexDirection": "row",
          },
          Object {
            "width": 0,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexGrow": 1,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "flexGrow": 1,
              "flexShrink": 0,
              "paddingHorizontal": 14,
            }
          }
        >
          <RNGestureHandlerButton
            collapsable={false}
            onGestureEvent={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            onHandlerStateChange={[Function]}
            rippleColor={0}
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                undefined,
              ]
            }
          >
            <View
              accessible={true}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View>
                <Text
                  style={
                    Array [
                      Object {
                        "flexShrink": 0,
                        "fontFamily": "GTGuardianTitlepiece-Bold",
                        "fontSize": 24,
                        "lineHeight": 26,
                      },
                      Array [
                        Object {
                          "color": "#ffffff",
                          "marginTop": -2,
                        },
                        undefined,
                        Object {},
                      ],
                    ]
                  }
                >
                  Thursday
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "flexShrink": 0,
                        "fontFamily": "GTGuardianTitlepiece-Bold",
                        "fontSize": 24,
                        "lineHeight": 26,
                      },
                      Array [
                        Object {
                          "color": "#ffffff",
                          "marginTop": -2,
                        },
                        Object {
                          "color": "#ffe500",
                        },
                        Object {},
                      ],
                    ]
                  }
                >
                  25 June
                </Text>
              </View>
            </View>
          </RNGestureHandlerButton>
        </View>
        <View
          style={
            Object {
              "paddingRight": 14,
            }
          }
        >
          <View
            accessibilityHint="More issues"
            accessibilityRole="button"
            accessible={true}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderRadius": 999,
                    "height": 42,
                    "justifyContent": "center",
                    "paddingHorizontal": 21,
                  },
                  Object {
                    "backgroundColor": "#ffe500",
                  },
                  Object {
                    "alignItems": "center",
                    "aspectRatio": 1,
                    "justifyContent": "center",
                    "paddingHorizontal": 0,
                    "width": 42,
                  },
                  undefined,
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "fontFamily": "GuardianIcons-Regular",
                      "fontSize": 20,
                      "lineHeight": 20,
                    },
                    Array [
                      Object {
                        "color": "#121212",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
